Fix: OXUIB-625 Bad alignment of 'Forgot your password' text element
Root cause: Unnecessary margin
Solution: Remove unnecessary margin

--- a/ui/apps/themes/login/login.less
+++ b/ui/apps/themes/login/login.less
@@ -411,10 +411,6 @@ html.baseline {
 
         .row.username, .row.password {
             margin: 0;
-
-            div {
-                margin-top: 2px;
-            }
         }
 
         .row.options {
